--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <i class="fa fa-map-marker"></i>
         
           <a href="https://www.google.com.br/maps/place/Paradise+Motel/@-15.578867,-56.097962,15z/data=!4m2!3m1!1s0x0:0x499e1a47501509a7?sa=X&ved=0ahUKEwjxrsrg5MPZAhVF7VMKHWCnC6QQ_BIIqQEwCg" class="hero__link" target="_blank">
-            <address class="hero__address">Av. Miguel Sutil, 7694, 78043-500 Cuiabá</address>
+            <address class="hero__address">Av. Miguel Sutil, 7694, 78043-500 Cuiabá MT</address>
           </a>
         
       </div>
